--- a/static/css/oppia.scss
+++ b/static/css/oppia.scss
@@ -3,9 +3,9 @@
 
 // Oppia colors
 $oppia-lighter: #c1e552;
-$oppia-light: #9aca3c;
-$oppia-mid: #689e3a;
-$oppia-dark: #628817;
+$oppia-light: #37B7E6;
+$oppia-mid: #00956E;
+$oppia-dark: #00956E;
 $info-color: #828d83;
 
 $navbar-dark-color: #fff;
