--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -5,7 +5,7 @@
 {% block extrastyle %}
 <style>
 	#header{
-		background: #689e3a;
+		background: #00956E;
 		color: #fff;}
 
 	#branding h1, #branding h1 a:link, #branding h1 a:visited {
@@ -13,15 +13,15 @@
     }
     
 	div.breadcrumbs {
-    	background: #9aca3c;
+    	background: #37B7E6;
     	color: #fff;
     }
     
     .module h2, .module caption, .inline-group h2 {
-    	background: #689e3a;
+    	background: #00956E;
     }
     a:link, a:visited {
-    	color: #628817;
+    	color: #00956E;
     	text-decoration: none;
 	}
 
@@ -35,7 +35,7 @@
 
 <h1 id="site-name">
     <a href="{% url 'admin:index' %}">
-        <img src="{% static 'oppia/images/dc_logo.png' %}" height="40px" alt="Site icon"/>
+        <img src="{% static 'oppia/images/noora_logo_white.png' %}" height="40px" alt="Site icon"/>
         {% trans 'app_name' %} {% trans 'Admin' %}
     </a>
 </h1>
