--- a/templates/includes/navbar_superuser.html
+++ b/templates/includes/navbar_superuser.html
@@ -6,7 +6,7 @@
     <button class="navbar-toggler always-show" type="button" data-toggle="navdrawer" data-target="#doc-navdrawer" aria-controls="doc-navdrawer" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand text-light" href="{% url 'oppia:index' %}"><img class="mr-2" src="{% static "oppia/images/dc_logo.png" %}" height="30" alt="{% trans 'app_name' %} {% trans 'logo' %}"/>{% trans 'app_name' %}</a>
+      <a class="navbar-brand text-light" href="{% url 'oppia:index' %}"><img class="mr-2" src="{% static "oppia/images/noora_logo_white.png" %}" height="30" alt="{% trans 'app_name' %} {% trans 'logo' %}"/>{% trans 'app_name' %}</a>
 
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
