--- a/static/css/oppia.scss
+++ b/static/css/oppia.scss
@@ -4,8 +4,8 @@
 // Oppia colors
 $oppia-lighter: #c1e552;
 $oppia-light: #37B7E6;
-$oppia-mid: #00956E;
-$oppia-dark: #00956E;
+$oppia-mid: #DD3E77;
+$oppia-dark: #1688b1;
 $info-color: #828d83;
 
 $navbar-dark-color: #fff;
