--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -5,7 +5,7 @@
 {% block extrastyle %}
 <style>
 	#header{
-		background: #00956E;
+		background: #DD3E77;
 		color: #fff;}
 
 	#branding h1, #branding h1 a:link, #branding h1 a:visited {
@@ -18,10 +18,10 @@
     }
     
     .module h2, .module caption, .inline-group h2 {
-    	background: #00956E;
+    	background: #DD3E77;
     }
     a:link, a:visited {
-    	color: #00956E;
+    	color: #DD3E77;
     	text-decoration: none;
 	}
 
